Some work arounds to HIDE Bug #17065 which causes us to hang when parsing large imap folders on linux. WE still have the problme where the ui thread is stealing events from the imap thread and processing them on the ui thread.

We're just working around it so folks can use linux imap mail. This code was jointly written with bienvenu.

r=bienvenu/mscott